[gd_scene load_steps=2 format=3 uid="uid://bl0ou8q25q4ab"]

[ext_resource type="Script" uid="uid://b6xi5xsb5pevp" path="res://scripts/settings_scene.gd" id="1_kqt80"]

[node name="SettingsScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kqt80")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="SettingsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TextSpeedContainer" type="HBoxContainer" parent="VBoxContainer/SettingsContainer"]
layout_mode = 2

[node name="TextSpeedLabel" type="Label" parent="VBoxContainer/SettingsContainer/TextSpeedContainer"]
layout_mode = 2

[node name="TextSpeedSlider" type="HSlider" parent="VBoxContainer/SettingsContainer/TextSpeedContainer"]
layout_mode = 2

[node name="TextSpeedValue" type="Label" parent="VBoxContainer/SettingsContainer/TextSpeedContainer"]
layout_mode = 2

[node name="VolumeContainer" type="HBoxContainer" parent="VBoxContainer/SettingsContainer"]
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="VBoxContainer/SettingsContainer/VolumeContainer"]
layout_mode = 2

[node name="MasterVolumeSlider" type="HSlider" parent="VBoxContainer/SettingsContainer/VolumeContainer"]
layout_mode = 2

[node name="MasterVolumeValue" type="Label" parent="VBoxContainer/SettingsContainer/VolumeContainer"]
layout_mode = 2

[node name="FullscreenContainer" type="HBoxContainer" parent="VBoxContainer/SettingsContainer"]
layout_mode = 2

[node name="FullscreenLabel" type="Label" parent="VBoxContainer/SettingsContainer/FullscreenContainer"]
layout_mode = 2

[node name="FullscreenCheckBox" type="CheckBox" parent="VBoxContainer/SettingsContainer/FullscreenContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2

[node name="ApplyButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
